# BlueOSSLAM

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml
.github/workflows/: deploy.yml
app/: CFAR.py  DataManager.py  MavlinkServer.py  MavlinkUDP.py  NavigatorData.py  PingManager.py  Processor.py  ROVState.py  SLAM.py  SonarFeatureExtraction.py  SonarManager.py  cfar_utils.py  main.py  pyproject.toml  settings.py  setup.py  typedefs.py  video_capture.py  video_odometry.py
app/mavlink/: Processor.py
app/mavlink_com/: MavlinkUDP.py
app/src/: Processor.py  main.py  settings.py
app/src/mavlink/: DataManager.py
app/src/ping/: CFAR.py  PingManager.py  ScanRecorder.py  SonarFeatureExtraction.py
app/src/static/: index.html
app/src/video/: video_capture.py
app/static/: index.html  register_service
