[project]
name = "slam"
version = "0.0.1"
description = "A SLAM implementation using Ping360 Sonar."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi == 0.105.0",
    "anyio == 3.7.1",
    "fastapi-versioning == 0.9.1",
    "loguru == 0.5.3",
    "pyserial == 3.5",
    "starlette == 0.27.0",
    "uvicorn == 0.13.4",
    "requests == 2.32.3"
]