[project]
name = "slam"
version = "0.0.1"
description = "A SLAM implementation using Ping360 Sonar."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi == 0.105.0",
    "anyio == 3.7.1",
    "fastapi-versioning == 0.9.1",
    "loguru == 0.5.3",
    "pyserial == 3.5",
    "starlette == 0.27.0",
    "uvicorn == 0.13.4",
    "requests == 2.32.3",
    "bluerobotics-ping == 0.1.5",
    "pymavlink == 2.4.42",
    "modern-robotics == 1.1.1",
    "opencv-python-headless == 4.11.0.86",
    "pycairo == 1.27.0",
    "PyGObject == 3.50.0",
    "numpy == 2.0.2",
    "matplotlib == 3.9.4",
    "scipy == 1.13.1",
    "h5py == 3.13.0"
]